--- a/index.html
+++ b/index.html
@@ -4,137 +4,265 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="./fonts/font/MullerBlackItalic.woff2" />
+
+    <title>Header and Menu</title>
   </head>
   <body>
-    <header class="header">
-      <div class="header__logo">Логотип</div>
-      <nav class="header__nav">
-        <ul class="header__list">
-          <li class="header__list_item">
-            <a class="header__list_link" href="#">Пункт 1</a>
-          </li>
-          <li class="header__list_item">
-            <a class="header__list_link" href="#">Пункт 2</a>
-          </li>
-          <li class="header__list_item">
-            <a class="header__list_link" href="#">Пункт 3</a>
-          </li>
-          <li class="header__list_item">
-            <a class="header__list_link" href="#">Пункт 4</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="burger-menu">Меню</div>
-    </header>
-    <main class="content">
-      <section class="content__block">
-        <h2 class="content__block_title">Наши работы</h2>
-        <div class="feedback">
-          <div class="container">
-            <div
-              class="feedback-slider"
-              style="position: relative; height: 400px">
-              <button class="main-slider-btn main-prev-btn">
-                <img src="./src/assets/img/left-arr.png" alt="left" /></button
-              >'
-              <button class="main-slider-btn main-next-btn">
-                <img src="./src/assets/img/right-arr.png" alt="right" />
-              </button>
-              <div class="feedback-slider-item">
-                <div class="col-sm-5">
-                  <div class="feedback-block">
-                    <!-- <button class="button button-order button-design">
-                      Хочу так же
-                    </button> -->
-                  </div>
-                </div>
-                <div class="col-sm-5 col-sm-offset-1">
-                  <p class="feedback-heading">Арктический блонд</p>
-                  <img src="./public/ блонд.webp" alt="" />
-                  <p class="feedback-text"></p>
-                  <p class="feedback-signature">
-                    <!-- <span>Олег Петров,</span> д. Месягутово -->
-                  </p>
-                </div>
-              </div>
-              <div class="feedback-slider-item">
-                <div class="col-sm-5">
-                  <div class="feedback-block">
-                    <!-- <button class="button button-order button-design">
-                      Хочу так же
-                    </button> -->
-                  </div>
-                </div>
-                <div class="col-sm-5 col-sm-offset-1">
-                  <p class="feedback-heading">Маникюр с покрытием</p>
-                  <img src="./public/ маник.webp" alt="" />
-                  <p class="feedback-text"></p>
-                  <p class="feedback-signature">
-                    <!-- <span>Ирина Антонова,</span> г. Кисловодск -->
-                  </p>
-                </div>
-              </div>
-              <div class="feedback-slider-item">
-                <div class="col-sm-5">
-                  <div class="feedback-block">
-                    <!-- <button class="button button-order button-design">
-                      Хочу так же
-                    </button> -->
-                  </div>
-                </div>
-                <div class="col-sm-5 col-sm-offset-1">
-                  <p class="feedback-heading">Укладка от топ-стилиста</p>
-                  <img src="./public/ укл.webp" alt="" />
-                  <p class="feedback-text"></p>
-                  <p class="feedback-signature">
-                    <!-- <span>Нарек Маргарян,</span> г. Великие Луки -->
-                  </p>
-                </div>
-              </div>
-            </div>
+    <header>
+      <div class="left-column">
+        <div class="contact-info">
+          <p>Адрес: ул. Примерная, 123</p>
+          <p>Телефон: +7 (123) 456-7890</p>
+          <div class="social-media-icons">
+            <!-- Иконки социальных сетей -->
           </div>
         </div>
-        <!-- <figure>
-          <img src="image1.jpg" alt="Описание изображения 1" />
-          <figcaption>Подпись к изображению 1</figcaption>
-        </figure>
-        <figure>
-          <img src="image2.jpg" alt="Описание изображения 2" />
-          <figcaption>Подпись к изображению 2</figcaption>
-        </figure>
-        <figure>
-          <img src="image3.jpg" alt="Описание изображения 3" />
-          <figcaption>Подпись к изображению 3</figcaption>
-        </figure> -->
-      </section>
-      <section class="content__block">
-        <h2 class="content__block_title">О наc</h2>
-        <p class="content__block_desk">
-          Добро пожаловать в нашу галерею фотографий! Здесь вы найдете красивые
-          и уникальные снимки, сделанные нашими талантливыми фотографами. Мы
-          постоянно обновляем нашу коллекцию, так что заглядывайте сюда чаще,
-          чтобы не пропустить новые работы. Надеемся, что вам понравятся наши
-          фотографии!
-        </p>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer__contact-info">
-        <a class="footer__contact-link">Phone: 123-456-7890</a>
-        <p class="footer__contact-address">
-          Address: 123 Street, City, Country
-        </p>
-        <p>Follow us on social media:</p>
-        <a class="footer__contact-socialnet" href="#">Facebook</a><br />
-        <a class="footer__contact-socialnet" href="#">Twitter</a><br />
-        <a class="footer__contact-socialnet" href="#">Instagram</a>
       </div>
-    </footer>
+      <div class="logo">
+        <img src="./public/Frame 1.jpg" alt="Логотип" />
+      </div>
+      <div class="right-column">
+        <div class="contact-info">
+          <p>Адрес: ул. Примерная, 123</p>
+          <p>Телефон: +7 (123) 456-7890</p>
+          <div class="social-media-icons">
+            <!-- Иконки социальных сетей -->
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Введите ваш номер телефона</h2>
+        <form id="phoneForm">
+          <input
+            type="tel"
+            id="phoneNumber"
+            placeholder="Номер телефона"
+            required />
+          <button type="submit">Отправить</button>
+        </form>
+      </div>
+    </div>
 
-    <!-- Остальной контент лендинга -->
-    <script src="./main.ts"></script>
-    <script src="./modal.ts"></script>
+    <div class="menu">
+      <div id="modal" style="display: none">
+        <span id="close-modal" style="float: right; cursor: pointer"
+          >&#10006;</span
+        >
+        <h2>Здравствуйте, оставьте свой номер, и мы Вам перезвоним</h2>
+        <form id="modal-form">
+          <input
+            type="text"
+            id="phone-number"
+            placeholder="Введите ваш номер телефона" />
+          <button type="submit">Отправить</button>
+        </form>
+      </div>
+
+      <ul>
+        <li>О Нас <a href="#"></a></li>
+        <li>Услуги <a href="#"></a></li>
+        <li>
+          Я Хочу <a href="#"></a>
+          <ul class="dropdown">
+            <li><a href="#" class="scroll-link">Укладку</a></li>
+            <li><a href="#" class="scroll-link">Гладкую кожу</a></li>
+            <li><a href="#" class="scroll-link">Маникюр</a></li>
+            <li><a href="#" class="scroll-link">Идеальную фигуру</a></li>
+            <li><a href="#" class="scroll-link">Подтянутый овал лица</a></li>
+          </ul>
+        </li>
+        <li>Мы В Медиа <a href="#"></a></li>
+        <li id="work-link">Хочу У Вас Работать <a href="#"></a></li>
+      </ul>
+    </div>
+    <div class="gallery">
+      <img src="./public/ блонд.webp" alt="Photo 1" />
+      <img src="./public/ маник.webp" alt="Photo 1" />
+      <button class="prev">Назад</button>
+      <button class="next">Вперед</button>
+    </div>
+    <div class="fixed-buttons">
+      <button class="button" id="openModalButton">Онлайн-запись</button>
+      <button class="button" id="openModalButton2">Закажи звонок</button>
+    </div>
+
+    <div class="modal" id="modal">
+      <div class="modal-content">
+        <h2>Оставьте ваш номер телефона</h2>
+        <input
+          class="formNum"
+          type="text"
+          id="phoneNumber"
+          placeholder="Введите номер телефона" />
+        <button id="callMeButton">Перезвоните мне</button>
+      </div>
+    </div>
+
+    <div class="message"></div>
+    <section class="section">
+      <div class="grid">
+        <div class="item">
+          <div class="item__details">jelly-o brownie sweet</div>
+        </div>
+
+        <div class="item item--large">
+          <div class="item__details">Muffin jelly gingerbread</div>
+        </div>
+        <div class="item item--medium">
+          <div class="item__details">sesame snaps chocolate</div>
+        </div>
+        <div class="item item--large">
+          <div class="item__details">Oat cake</div>
+        </div>
+        <!-- <div class="item item--full">
+          <div class="item__details">
+             jujubes cheesecake
+          </div>
+        </div> -->
+        <div class="item item--medium">
+          <div class="item__details">Dragée pudding brownie</div>
+        </div>
+        <div class="item">
+          <div class="item__details">Oat cake</div>
+        </div>
+        <!--    <div class="item">
+          <div class="item__details">
+            powder toffee
+          </div>
+        </div>
+        <div class="item item--medium">
+          <div class="item__details">
+            pudding cheesecake
+          </div>
+        </div>
+        <div class="item item--large">
+          <div class="item__details">
+            toffee bear claw 
+          </div>
+        </div>
+        <div class="item">
+          <div class="item__details">
+            cake cookie croissant
+          </div>
+        </div>
+        <div class="item item--medium">
+          <div class="item__details">
+            liquorice sweet roll
+          </div>
+        </div>
+        <div class="item item--medium">
+          <div class="item__details">
+            chocolate marzipan
+          </div>
+        </div>
+        <div class="item item--large">
+          <div class="item__details">
+            danish dessert lollipop
+          </div>
+        </div>
+        <div class="item">
+          <div class="item__details">
+            sugar plum dragée
+          </div>
+        </div>
+      </div> -->
+      </div>
+    </section>
+
+    <!-- <div class="grid-container">
+      <div class="photo-container">
+        <div class="grid-item">
+          <img
+            id="big"
+            src="./public/ блонд.webp"
+            alt="Photo 1"
+            class="grid-item" />
+          <h2>ОКРАШИВАНИЕ</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img
+            id="sml"
+            src="./public/ блонд.webp"
+            alt="Photo 2"
+            class="grid-item" />
+          <h2>ТЕЛО</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img
+            id="sml"
+            src="./public/ блонд.webp"
+            alt="Photo 3"
+            class="grid-item" />
+          <h2>ЛИЦО</h2>
+          <p>Description</p>
+        </div>
+      </div>
+
+      <div class="photo-container">
+        <div class="grid-item">
+          <img
+            id="medium"
+            src="./public/ блонд.webp"
+            alt="Photo 4"
+            class="grid-item" />
+          <h2>МАНИКЮР</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img
+            id="large"
+            src="./public/ блонд.webp"
+            alt="Photo 5"
+            class="grid-item" />
+          <h2>ТЕЛО</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img src="./public/ блонд.webp" alt="Photo 6" class="grid-item" />
+          <h2>РЕСНИЦЫ</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img src="./public/ блонд.webp" alt="Photo 7" class="grid-item" />
+          <h2>ЛИЦО</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img src="./public/ блонд.webp" alt="Photo 8" class="grid-item" />
+          <h2>ТЕЛО</h2>
+          <p>Description</p>
+        </div>
+      </div>
+      <div class="photo-container">
+        <div class="grid-item">
+          <img src="./public/ блонд.webp" alt="Photo 9" class="grid-item" />
+          <h2>ВОЛОСЫ</h2>
+          <p>Description</p>
+        </div>
+      </div> -->
+
+    <!-- <button class="hover-btn">К Услугам</button> -->
+    <!-- </div> -->
   </body>
+  <script src="./slider.js"></script>
+  <script src="./modal.js"></script>
+  <script src="./main.js"></script>
 </html>
