--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts/font/MullerBlackItalic.woff2" />
 
-    <title>Header and Menu</title>
+    <title>Magiskus</title>
   </head>
   <body>
     <header>
