--- a/depel.html
+++ b/depel.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Price Page</title>
+    <title>Depel</title>
   </head>
   <body>
-    <h1>Прайс</h1>
-    <p>Здесь можно разместить информацию о ваших услугах и ценах.</p>
+    <h1>Depel</h1>
   </body>
 </html>
