--- a/face.html
+++ b/face.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./price.css" />
     <title>Face</title>
   </head>
   <body>
-    <h1>Face</h1>
+    <h1>Сияние лица</h1>
+
+    <div class="price-list">
+      <div>Массаж лица</div>
+      <div>3500 руб</div>
+      <div>Ингибитор жира лицо</div>
+      <div>1000 руб</div>
+      <div>Чистка лица «Сияющая кожа» (90 мин)</div>
+      <div>4500</div>
+      <div>Уход классический «Цвет и молодость» (60 мин)</div>
+      <div>4500</div>
+      <div>Уход «Биплазма oGi Gi» (60 мин)</div>
+      <div>4500</div>
+
+      <div>Уход за глазами (30 мин)</div>
+      <div>2500</div>
+
+      <div>Миофасциальный Массаж лица (60 мин)</div>
+      <div>3000</div>
+
+      <div>ПИЛИНГ PRX t 33</div>
+      <div>6000</div>
+
+      <div>ПИЛИНГ Bio Re Pee</div>
+      <div>5500</div>
+
+      <div>ПИЛИНГ PQ age</div>
+      <div>4500</div>
+
+      <div>ПИЛИНГ Осветляющий</div>
+      <div>7000</div>
+
+      <div>Миндальный (поверхностный)</div>
+      <div>3500</div>
+
+      <div>Мультипилинг (средне-поверхностный)</div>
+      <div>3500</div>
+
+      <div>ПИЛИНГ Молочный (поверхностный)</div>
+      <div>3500</div>
+
+      <div>ПИЛИНГ Салициловый</div>
+      <div>3500</div>
+
+      <div>ПИЛИНГ Гликолевый (поверхностно-серединный)</div>
+      <div>3500</div>
+
+      <div>ПИЛИНГ Ретиноловый (Желтый) (серединный,Анти возраст)</div>
+      <div>4500</div>
+
+      <div>ПИЛИНГ ТСА (отшелушивающий)</div>
+      <div>6000</div>
+    </div>
   </body>
 </html>
