--- a/nail.html
+++ b/nail.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./price.css" />
     <title>Ногти</title>
   </head>
   <body>
-    <h1>Ногти</h1>
+    <h1>Аккуратные пальцы</h1>
+    <div class="price-list">
+      <div>Педикюр Голден Тресс</div>
+      <div>3400 руб</div>
+      <div>Педикюр Экспресс (только пальчики)</div>
+      <div>2000 руб</div>
+      <div>Снятие Лак</div>
+      <div>300 руб</div>
+      <div>Снятие Гель-лак</div>
+      <div>300 руб</div>
+      <div>Покрытие Лак</div>
+      <div>500 руб</div>
+
+      <div>Покрытие Лак</div>
+      <div>500 руб</div>
+
+      <div>Покрытие Лечебный лак</div>
+      <div>500 руб</div>
+
+      <div>Покрытие Гель-лак</div>
+      <div>1400 руб</div>
+
+      <div>Покрытие Френч</div>
+      <div>1700 руб</div>
+
+      <div>Ремонт Натурального ногтя</div>
+      <div>500 руб</div>
+
+      <div>Ремонт Наращённого ногтя</div>
+      <div>500 руб</div>
+
+      <div>Наращивание ногтей</div>
+      <div>4000 руб</div>
+
+      <div>Покрытие гель-лак LUXIO</div>
+      <div>1900 руб</div>
+
+      <div>Процедура СПА (парафин)</div>
+      <div>1000 руб</div>
+
+      <div>Маникюр Экспресс</div>
+      <div>600 руб</div>
+
+      <div>Маникюр Комбинированный</div>
+      <div>1500 руб</div>
+
+      <div>Маникюр Мужской</div>
+      <div>1500 руб</div>
+
+      <div>Маникюр Для маленьких принцесс</div>
+      <div>600 руб</div>
+
+      <div>Базовое под лак</div>
+      <div>100 руб</div>
+
+      <div>Закрепитель</div>
+      <div>100 руб</div>
+
+      <div>Матовое для мужчин</div>
+      <div>100 руб</div>
+
+      <div>Дизайн</div>
+      <div>500 руб</div>
+
+      <div>Укрепление натуральных ногтей Биогель</div>
+      <div>500 руб</div>
+
+      <div>Укрепление натуральных ногтей База</div>
+      <div>500 руб</div>
+
+      <div>Укрепление натуральных ногтей Акрил</div>
+      <div>500 руб</div>
+    </div>
   </body>
 </html>
