--- a/priceBody.html
+++ b/priceBody.html
@@ -8,17 +8,8 @@
     <title>Price Page</title>
   </head>
   <body>
-    <h1 class="price-header">Price List</h1>
+    <h1 class="price-header">Расслабление и перезагрузка</h1>
     <div class="price-list">
-      <div>
-        <input type="checkbox" class="service" data-price="4000" />Чистка лица
-        «Сияющая кожа» (90 мин)
-      </div>
-      <div>4500</div>
-      <div>Уход классический «Цвет и молодость» (60 мин)</div>
-      <div>4500</div>
-      <div>Уход «Биплазма oGi Gi» (60 мин)</div>
-      <div>4500</div>
       <div>Классическое SPA всего тела 1.5ч</div>
       <div>4000 руб</div>
       <div>Классическое SPA всего тела 1 ч</div>
@@ -35,8 +26,7 @@
       <div>2000 руб</div>
       <div>Массаж релаксационный 1.5ч</div>
       <div>4000 руб</div>
-      <div>Массаж лица</div>
-      <div>3500 руб</div>
+
       <div>Массаж релаксационный 1ч</div>
       <div>3000 руб</div>
       <div>Программа SPA (массаж, пилинг, обертывание)</div>
@@ -45,16 +35,12 @@
       <div>4000 руб</div>
       <div>Ингибитор жира 1 зона тела</div>
       <div>2000 руб</div>
-      <div>Ингибитор жира лицо</div>
-      <div>1000 руб</div>
+
       <div>SPA живот+руки+спина 1ч</div>
       <div>2500 руб</div>
       <div>Лимфодренаж ног</div>
       <div>2500 руб</div>
     </div>
-
-    <div>Итог:</div>
-    <div id="total-price">0 руб</div>
   </body>
   <script src="./priceBody.js"></script>
 </html>
