logo media burger

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         </div>
       </div>
       <div class="logo">
-        <h1 class="title">Магия Искусства</h1>
+        <img
+          src="./public/лого узкий.png"
+          width="170px"
+          height="170px"
+          alt="logo" />
       </div>
       <div class="right-column">
         <div class="contact-info">
