--- a/priceBody.html
+++ b/priceBody.html
@@ -42,5 +42,5 @@
       <div>2500 руб</div>
     </div>
   </body>
-  <script src="./priceBody.js"></script>
+  <script type="module" src="./priceBody.js"></script>
 </html>
